- Implemented a Flex ResourceService, that loads and caches the image resources for location, languages and streams - Implemented a working Java ResourceService, which provides image resources by scanning the war content - Added the image resources for streams and languages.
The server side is a intermediate solution until we have a more generic way to handle persistence of image data (Stored in a DB or whatsoever)

--- a/core/src/main/flex/DukeConContext.mxml
+++ b/core/src/main/flex/DukeConContext.mxml
@@ -11,6 +11,9 @@
         <services:ServerConnection baseUrl="{baseUrl}"/>
         <!-- Service for accessing conference data -->
         <services:ConferenceService/>
+        <!-- Service for accessing image resources -->
+        <services:ResourceService/>
+
         <services:EventService/>
         <services:LanguageService/>
         <services:LocationService/>
