--- a/core/src/main/flex/org/dukecon/itemrenderer/SpeakerItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/SpeakerItemRenderer.mxml
@@ -71,7 +71,7 @@
         </s:stroke>
     </s:Rect>
 
-    <comp:VectorImage source="{speakerIcon}" top="10" left="10" width="110" bottom="10"/>
+    <s:Image source="{speakerIcon}" top="10" left="10" width="110" bottom="10"/>
 
     <s:HGroup top="8" left="150" right="18" bottom="8" verticalAlign="middle">
         <s:Label id="itemLabel" text="{speaker.name}" styleName="listTitle"/>
